--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -154,3 +154,12 @@ button:after {
     top: 0;
     border-radius: 10px;
 }
+
+#popup{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #0022ff;
+    text-shadow: #FC0 1px 0 10px;
+}
