--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -14,15 +14,17 @@ h1{
 
 img{
     object-fit: cover;
-    width: 100%;
-    height: 100%;
+    width: 130px;
+    height: 130px;
+    /* width: 100%;
+    height: 100%; */
     border-radius: 25px;
     border: 2px solid greenyellow;
 }
 ul{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 10px;
+    gap: 100px;
     align-items: center;
     padding: 20px;
 }
@@ -162,4 +164,15 @@ button:after {
     transform: translate(-50%, -50%);
     color: #0022ff;
     text-shadow: #FC0 1px 0 10px;
+    background-color: #fffb00;
+    z-index: 2;
+}
+
+#backdrop{
+    width: 100vw;
+    height: 100vh;
+    background-color: #222;
+    position: absolute;
+    top: 0;
+    opacity: 0.8;
 }
