--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -34,9 +34,14 @@ li{
     border: 2px dotted rgb(0, 0, 0);
     text-align: center;
     justify-items: center;
-    background-color: orange;
+    background: rgb(255, 214, 0);
+        background: linear-gradient(333deg, rgba(255, 214, 0, 1) 0%, rgba(255, 64, 0, 1) 100%);
     box-shadow: 12px 12px 10px 1px rgba(0, 0, 255, .2);
     padding: 5px;
+    transition: transform 1s;
+}
+li:hover{
+    transform: scale(1.2);
 }
 
 #description{
@@ -164,15 +169,25 @@ button:after {
     transform: translate(-50%, -50%);
     color: #0022ff;
     text-shadow: #FC0 1px 0 10px;
-    background-color: #fffb00;
+    background: rgb(0, 255, 16);
+        background: linear-gradient(222deg, rgba(0, 255, 16, 1) 0%, rgba(255, 214, 0, 1) 58%);
     z-index: 2;
+    padding: 40px;
+    border-radius: 10px;
+    border: 2px solid #ff00c8;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 #backdrop{
     width: 100vw;
     height: 100vh;
     background-color: #222;
-    position: absolute;
+    position: fixed;
     top: 0;
     opacity: 0.8;
+    overflow: hidden;
 }
