--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -4,20 +4,22 @@
     color: green;
 }
 body{
-    background-color: antiquewhite;
+    background: linear-gradient(222deg, rgb(255, 98, 0) 0%, rgba(255, 214, 0, 1) 58%);
     font-family: 'DM Serif Display', serif;
+    height: 100vh;
 }
 
 h1{
-    color: green;
+    color: rgb(255, 111, 0);
+    text-shadow: rgb(255, 255, 255) 0px 0 20px;
+    -webkit-text-stroke-width: 0.1px;
+        -webkit-text-stroke-color: rgb(255, 255, 255);
 }
 
 img{
     object-fit: cover;
     width: 130px;
     height: 130px;
-    /* width: 100%;
-    height: 100%; */
     border-radius: 25px;
     border: 2px solid greenyellow;
 }
@@ -61,39 +63,6 @@ li:hover{
     gap: 10px;
     margin: 30px;
 }
-
-/* button{
-    background-image: linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
-    border-radius: 8px;
-    border-style: none;
-    box-sizing: border-box;
-    color: #FFFFFF;
-    cursor: pointer;
-    flex-shrink: 0;
-    font-family: "Inter UI", "SF Pro Display", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    padding: 10px 30px;
-    text-align: center;
-    text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
-    transition: all .5s;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-}
-    
-button:hover {
-    box-shadow: rgba(80, 63, 205, 0.5) 0 1px 30px;
-    transition-duration: .1s;
-}
-
-@media (min-width: 768px) {
-    .button-36 {
-        padding: 0 2.6rem;
-    }
-} */
-
-
 
 button {
     padding: 0.6em 2em;
@@ -167,19 +136,23 @@ button:after {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: #0022ff;
-    text-shadow: #FC0 1px 0 10px;
-    background: rgb(0, 255, 16);
-        background: linear-gradient(222deg, rgba(0, 255, 16, 1) 0%, rgba(255, 214, 0, 1) 58%);
+    text-shadow: rgb(255, 255, 255) 1px 0 10px;
+        background: linear-gradient(222deg, rgb(255, 98, 0) 0%, rgba(255, 214, 0, 1) 58%);
     z-index: 2;
     padding: 40px;
     border-radius: 10px;
-    border: 2px solid #ff00c8;
+    border: 2px solid #ff6600;
     overflow: hidden;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    color: rgb(63, 63, 63);
+    box-shadow: 0px 0px 25px rgb(255, 220, 194);
+}
+
+em{
+    color: #ff4d00;
 }
 
 #backdrop{
@@ -191,3 +164,4 @@ button:after {
     opacity: 0.8;
     overflow: hidden;
 }
+
