--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -14,6 +14,7 @@ h1{
     text-shadow: rgb(255, 255, 255) 0px 0 20px;
     -webkit-text-stroke-width: 0.1px;
         -webkit-text-stroke-color: rgb(255, 255, 255);
+    font-size: 55px;
 }
 
 img{
@@ -137,7 +138,7 @@ button:after {
     left: 50%;
     transform: translate(-50%, -50%);
     text-shadow: rgb(255, 255, 255) 1px 0 10px;
-        background: linear-gradient(222deg, rgb(255, 98, 0) 0%, rgba(255, 214, 0, 1) 58%);
+        /* background: linear-gradient(222deg, rgb(255, 98, 0) 0%, rgba(255, 214, 0, 1) 58%); */
     z-index: 2;
     padding: 40px;
     border-radius: 10px;
@@ -147,8 +148,35 @@ button:after {
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    color: rgb(63, 63, 63);
+    text-align: center;
+    color: rgb(255, 255, 255);
     box-shadow: 0px 0px 25px rgb(255, 220, 194);
+    animation: color-change 1s infinite;
+}
+
+
+@keyframes color-change {
+    0% {
+        border: 2px solid #ff6600;
+    }
+
+    50% {
+        border: 2px solid #09ff00;
+    }
+
+    100% {
+        border: 2px solid #ff6600;
+    }
+}
+
+#theimage{
+    width: 100%;
+    height: 100%;
+    border: none;
+    position: absolute;
+    z-index: -1;
+    border-radius: 0;
+    filter: brightness(0.2);
 }
 
 em{
@@ -165,3 +193,15 @@ em{
     overflow: hidden;
 }
 
+@media screen and (max-width: 700px){
+    h1{
+        font-size: 35px;
+    }
+    ul {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 50px;
+        align-items: center;
+        padding: 20px;
+    }
+}
