--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -3,10 +3,16 @@
 .headingClass{
     color: green;
 }
+
 body{
-    background: linear-gradient(222deg, rgb(255, 98, 0) 0%, rgba(255, 214, 0, 1) 58%);
     font-family: 'DM Serif Display', serif;
+}
+#backgroundmain{
+    background: linear-gradient(222deg, rgb(255, 98, 0) 0%, rgba(255, 214, 0, 1) 58%);
     height: 100vh;
+    width: 100vw;
+    position: fixed;
+    z-index: -1;
 }
 
 h1{
@@ -138,7 +144,7 @@ button:after {
     left: 50%;
     transform: translate(-50%, -50%);
     text-shadow: rgb(255, 255, 255) 1px 0 10px;
-        /* background: linear-gradient(222deg, rgb(255, 98, 0) 0%, rgba(255, 214, 0, 1) 58%); */
+        background: linear-gradient(222deg, rgb(255, 255, 255) 0%, rgb(157, 157, 157) 58%);
     z-index: 2;
     padding: 40px;
     border-radius: 10px;
@@ -191,6 +197,7 @@ em{
     top: 0;
     opacity: 0.8;
     overflow: hidden;
+    z-index: 1;
 }
 
 @media screen and (max-width: 700px){
@@ -210,4 +217,5 @@ em{
     display: flex;
     align-items: center;
     justify-content: center;
+    bottom: 10px;
 }
