--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -30,14 +30,14 @@ img{
     border-radius: 25px;
     border: 2px solid greenyellow;
 }
-ul{
+#imagesul{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 100px;
     align-items: center;
     padding: 20px;
 }
-li{
+.image{
     list-style: none;
     border-radius: 25px;
     border: 2px dotted rgb(0, 0, 0);
@@ -49,7 +49,7 @@ li{
     padding: 5px;
     transition: transform 1s;
 }
-li:hover{
+.image:hover{
     transform: scale(1.2);
 }
 
@@ -222,11 +222,36 @@ em{
 
 #onecomment{
     background-color: light grey;
-    opacity: 0.5;
     border-radius: 5px;
     padding: 5px;
 }
 
 #submitcomment{
-    padding: 5px;
+    margin: 25px;
+}
+
+#results{
+    background-color: rgb(255, 255, 255);
+    z-index: 2;
+    border-radius: 15px;
+}
+
+li{
+    list-style-type: none;
+}
+
+.thecommentul{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+#one-comment{
+    color: rgb(0, 0, 0);
+    font-size: 15px;
+}
+
+#one-comment-data{
+    color: rgb(82, 82, 82);
+    font-size: 10px;
 }
