--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -21,6 +21,7 @@ h1{
     -webkit-text-stroke-width: 0.1px;
         -webkit-text-stroke-color: rgb(255, 255, 255);
     font-size: 55px;
+    padding: 10px;
 }
 
 img{
@@ -138,7 +139,7 @@ button:after {
     border-radius: 10px;
 }
 
-#popup{
+/* #popup{
     position: absolute;
     top: 50%;
     left: 50%;
@@ -158,6 +159,48 @@ button:after {
     color: rgb(255, 255, 255);
     box-shadow: 0px 0px 25px rgb(255, 220, 194);
     animation: color-change 1s infinite;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    
+} */
+#popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-shadow: rgb(255, 255, 255) 1px 0 10px;
+    background: linear-gradient(222deg, rgb(255, 255, 255) 0%, rgb(157, 157, 157) 58%);
+    z-index: 10;
+    height: 70%;
+    border-radius: 45px 10px 10px 45px;
+    border: 2px dashed gray;
+    display: flex;
+    background-attachment: fixed;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #ebebeb;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: #6d6d6d;
 }
 
 
@@ -234,6 +277,9 @@ em{
     background-color: rgb(255, 255, 255);
     z-index: 2;
     border-radius: 15px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 li{
@@ -248,12 +294,12 @@ li{
 
 #one-comment{
     color: rgb(0, 0, 0);
-    font-size: 15px;
+    font-size: 20px;
 }
 
 #one-comment-data{
     color: rgb(82, 82, 82);
-    font-size: 10px;
+    font-size: 15px;
 }
 
 #thecommentinput{
@@ -270,14 +316,19 @@ li{
 }
 
 #reply-div{
-    background-color: #036200;
+    background-color: #e77700;
     border-radius: 15px;
     padding: 10px;
     zoom: 0.7;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .thereplyul{
-    background-color: #71ff6c;
+    background-color: #fff06c;
+    border-radius: 10px;
+    font-size: 6px;
 }
 
 #replyandreplies{
