--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -139,30 +139,6 @@ button:after {
     border-radius: 10px;
 }
 
-/* #popup{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-shadow: rgb(255, 255, 255) 1px 0 10px;
-        background: linear-gradient(222deg, rgb(255, 255, 255) 0%, rgb(157, 157, 157) 58%);
-    z-index: 2;
-    padding: 40px;
-    border-radius: 10px;
-    border: 2px solid #ff6600;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    color: rgb(255, 255, 255);
-    box-shadow: 0px 0px 25px rgb(255, 220, 194);
-    animation: color-change 1s infinite;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    
-} */
 #popup {
     position: fixed;
     top: 50%;
@@ -172,6 +148,7 @@ button:after {
     background: linear-gradient(222deg, rgb(255, 255, 255) 0%, rgb(157, 157, 157) 58%);
     z-index: 10;
     height: 70%;
+    min-width: 500px;
     border-radius: 45px 10px 10px 45px;
     border: 2px dashed gray;
     display: flex;
@@ -334,4 +311,8 @@ li{
 #replyandreplies{
     display: flex;
     flex-direction: row;
+}
+
+#submitreply{
+    margin: 20px;
 }
